--- a/style.css
+++ b/style.css
@@ -11,14 +11,17 @@ body {
   line-height: 1.6;
   color: #333;
   overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .container {
   width: 800px;
+  width: calc(100vw - 4em);
   margin: 0 auto;
 }
 
 h1 {
+  font-size: calc(6vw + 1.5rem);
   text-align: center;
   color: lightblue;
 }
@@ -26,4 +29,9 @@ h1 {
 img {
   display: block;
   max-width: 100%;
+}
+
+.full-size-img {
+  max-width: 100vw;
+  margin: 0 calc(-50vw + 50%);
 }
