--- a/style.css
+++ b/style.css
@@ -35,3 +35,12 @@ img {
   max-width: 100vw;
   margin: 0 calc(-50vw + 50%);
 }
+
+.highlight {
+  background-color: lightblue;
+  text-align: center;
+  font-style: italic;
+  padding: 2em;
+  margin: 0 calc(-50vw + 50%);
+  font-size: calc(1vw + 1rem);
+}
